--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -6,7 +6,6 @@
   text-align: center;
   padding: 50px 20px;
   margin: 0 auto;
-  max-width: 100%;
 }
 
 .heading {
@@ -24,7 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 70%;
+  width: 100%;
   gap: 10px;
 }
 
